--- a/package.json
+++ b/package.json
@@ -15,8 +15,15 @@
   },
   "devDependencies": {
     "@types/react": "17.0.14",
-    "eslint": "7.30.0",
+    "eslint": "^7.30.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.3.2",
     "typescript": "4.3.5"
-  }
+  },
+  "lint": "eslint --fix . && echo 'Lint complete.'",
+  "watch": "watch 'clear && npm run -s test | tap-nirvana && npm run -s lint' src"
 }
