--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,40 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+    "@/app/*": [
+        "src/app/*"
+    ],
+    "@/common/*": [
+        "src/common/*"
+    ],
+    "@/components/*": [
+        "src/common/components/*"
+    ],
+    "@/hooks/*": [
+        "src/common/hooks/*"
+    ],
+    "@/types/*": [
+        "src/common/types/*"
+    ],
+    "@/utils/*": [
+        "src/common/utils/*"
+    ],
+    "@/layouts/*": [
+        "src/layouts/*"
+    ],
+    "@/modules/*": [
+        "src/modules/*"
+    ],
+    "@/pages/*": [
+        "src/pages/*"
+    ]
+  }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  
+  
 }
