--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@zeit/next-css": "^1.0.1",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
   },
