--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.11",
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.21.4",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
