--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
+    "@types/js-cookie": "^2.2.7",
+    "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.11",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.21.4",
+    "js-cookie": "^3.0.1",
     "next": "11.0.1",
+    "next-redux-wrapper": "^7.0.4",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "react-redux": "^7.2.5",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.0",
+    "typed-redux-saga": "^1.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
