--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "downlevelIteration": true,
+    "allowSyntheticDefaultImports": true,
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
