--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.4",
     "js-cookie": "^3.0.1",
     "next": "11.0.1",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^7.0.4",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -27,6 +28,8 @@
     "typed-redux-saga": "^1.3.1"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
+    "@types/next-redux-saga": "^3.0.2",
     "@types/react": "17.0.14",
     "@types/react-beautiful-dnd": "^13.1.1",
     "babel-plugin-styled-components": "^1.13.2",
