--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "js-cookie": "^3.0.1",
     "next": "11.0.1",
     "next-redux-saga": "^4.1.2",
-    "next-redux-wrapper": "^7.0.4",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
+    "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
@@ -32,6 +33,7 @@
     "@types/next-redux-saga": "^3.0.2",
     "@types/react": "17.0.14",
     "@types/react-beautiful-dnd": "^13.1.1",
+    "@types/react-modal": "^3.12.1",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "^7.30.0",
     "eslint-config-next": "11.0.1",
